2.8.1
 - fix: wrong scale for viscosity in bulk emodulus computation (#104)
2.8.0
 - BREAKING CHANGE: The volume feature in all previous versions was
   overestimated by about 2µm³. Please re-run your analysis pipeline.
 - setup: bump pyqtgraph from 0.12.2 to 0.12.3
 - setup: bump dclab from 0.36.1 to 0.37.0 (faulty volume computation)
2.7.4
 - setup: bump dclab from 0.35.6 to 0.36.1 (improved export speed)
2.7.3
 - build: remove console window (#102)
2.7.2
 - setup: bump dclab from 0.35.4 to 0.35.6 (Young's modulus could
   not be computed in some cases)
2.7.1
 - enh: display online polygon filters in metadata tab (#94)
 - enh: show user configuration section in metadata tab (#86)
 - setup: bump dclab from 0.34.3 to 0.35.4
 - tests: change test data to avoid warnings in dclab 0.35.0
2.7.0
 - feat: accept DCOR drag events from DCOR-Aid data browser
2.6.9
 - fix: don't reset color and name of dataset during duplicate
   matrix action (#96)
2.6.8
 - fix: adapt color scheme to work in dark mode (#92)
2.6.7
 - fix: correctly handle missing features on data export (#80)
 - ref: cleanup (default arguments and PyQt5 object references)
 - setup: bump dclab from 0.34.2 to 0.34.3 (set R_HOME)
 - build: bump rpy2 from 3.4.2 to 3.4.5
 - build: bump pyqtgraph from 0.12.1 to 0.12.2 and remove
   colorbar export workarounds
2.6.6
 - fix: false alarms about wrong pyqtgraph version on startup
   (removed the responsible code, because there are now more regular
   releases of pyqtgraph)
 - enh: allow passing session files, datasets, and filters via the
   command line (#88)
 - enh: associate the .so2 file format with Shape-Out on Windows (#88)
 - build: migrate to Inno Setup 6
 - ref: avoid pyqtgraph DeprecationWarning due to `translate`
2.6.5
 - fix: migrate to pg.ColorBarItem (with some manual patches from
   upstream) to resolve issues with SVG export (#87)
 - fix: units of viscosity is mPa*s (#91)
 - setup: bump pyqtgraph from 0.12.0 to 0.12.1